Remove ribbon positioning styles to fix layout issues on the right side

--- a/scss/compiledmods.css
+++ b/scss/compiledmods.css
@@ -61,7 +61,9 @@ div.pricing-rates .text-muted {
   background-color: #2f55d4 !important;
 }
 
-#download .ribbon.ribbon-right {
-  right: 10px !important;
-  top: 7px !important;
-}
+/* Removed to fix the ribbon on the right side
+  #download .ribbon.ribbon-right {
+    right: 10px !important;
+    top: 7px !important;
+  }
+*/
